# rapid

./: .dockerignore  .gitignore
components/: .gitignore
components/client/client/crates/ticket_manager/: Cargo.toml
frontend/rapid_front/: package.json
server/: .gitignore  pyproject.toml
server/app/: .env  .env.example  alembic.ini  config.py  database.py  exceptions.py  logger_config.py  main.py  models.py
server/app/alembic/: README  env.py
server/app/alembic/versions/: 2875c10da560_timezone_aware_created_and_updated.py  77b18bf90aa4_dbcache_model.py  8abcaa087964_create_cache_instance.py  931ae6485853_add_managed_object_field.py  a0d9829f97e5_uuid_as_pk_for_user.py  a3bce89363e0_user_s_model.py  b272bd285931_data_field_to_user_for_encrypted_data_.py  d9411d99dc0a_initial_with_authentication_tables.py
server/app/auth/: __init__.py  crud.py  dependencies.py  models.py  routes.py  schemas.py  security.py
server/app/auth/auths/: __init__.py
server/app/auth/auths/DBAuth/: __init__.py  authenticator.py
server/app/auth/auths/IPAuth/: __init__.py  authenticator.py
server/app/auth/mfas/: __init__.py
server/app/auth/mfas/TOTP/: __init__.py  mfa.py
server/app/core/: consts.py  exceptions.py  module.py
server/app/core/auth/: authenticator.py  mfa.py
server/app/core/managers/: cache.py  crypto.py
server/app/core/schemas/: type_responses.py
server/app/core/types/: auth.py  logger.py  states.py
server/app/core/ui/: __init__.py  user_interface.py
server/app/core/utils/: database.py  images.py  modfinder.py  serializer.py  singleton.py
server/app/core_types/: auth.py  states.py
server/app/routers/: users.py
server/app/users/: __init__.py  crud.py  models.py  routes.py  schemas.py
server/tests/: conftest.py  test_dependencies.py
server/tests/auth/: test_dependencies.py  test_token_creation.py
server/tests/core/: test_utils.py
server/tests/core/managers/: test_cache_manager.py  test_crypto_manager.py
server/tests/fixtures/: auth.py
(+1 files in other folders)
